# sports-betting-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-master.sh  nginx.conf  pyproject.toml  requirements.txt
src/: .env  requirements.txt
src/ukma/: __init__.py
src/ukma/betting_system/: __init__.py  core.py  db.py  main.py  models.py  schemas.py
src/ukma/betting_system/routers/: api.py  auth.py  bets.py  events.py
src/ukma/betting_system/tests/k6/: common.js
src/ukma/betting_system/tests/k6/load/: settlement_freeze.js  soak.js  spike.js
src/ukma/betting_system/tests/k6/problems/: dust_bets.js  idempotency.js  odds_slippage.js  overspending.js
