[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peaky-betting-project"
version = "0.1.0"
description = "backend for the betting project"
authors = [
    { name="Oleksand Ursatyi", email="oursatyi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.15.2",
    "black==25.1.0",
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "pytest==8.3.5",
    "SQLAlchemy==2.0.40",
    "uvicorn==0.34.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.0"
]

[project.scripts]
betting-api = "ukma.betting_system.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]